# programming-paradigms-hse2019

./: .gitignore  README.md
191107/: README.md  bad_code.py  demo.py  input.txt  mypy_example.py  plan.md  playground.py  refactoring_example.ipynb  test_playground.py  test_verbing.py  verbing.py
191107/grep/: test_grep.py
191113/: re_sample.ipynb
191114/: README.md
191128/: CMakeLists.txt  README.md
191128/src/: main.cpp
191205/: CMakeLists.txt  README.md  main.cpp
191213/: calculator_user_handler.py  calculator_user_handler_test.py
200117/: Homework.hs  Practice.hs
200124/: Homework.hs  Practice.hs
